
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/qrtool
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.12.0\...v0.12.1[0.12.1] - 2025-07-28

=== Changed

* Stop building man pages when compiling a package
  ({pull-request-url}/798[#798])

== {compare-url}/v0.11.8\...v0.12.0[0.12.0] - 2025-06-12

=== Changed

* Restore demo animation ({pull-request-url}/734[#734])
* Change the license for documents and assets to CC BY 4.0
  ({pull-request-url}/747[#747])
* Replace `--generate-completion` with `completion` subcommand
  ({pull-request-url}/755[#755])
* Remove help text for after auto-generated `--help`
  ({pull-request-url}/761[#761])
* Make the message for `--version` the same as the message for `-V`
  ({pull-request-url}/761[#761])
* Allow partial matches of subcommand names ({pull-request-url}/771[#771])

=== Removed

* Remove `qrtool-help(1)`

== {compare-url}/v0.11.7\...v0.11.8[0.11.8] - 2025-03-24

=== Changed

* Bump MSRV to 1.85.0 ({pull-request-url}/710[#710])

== {compare-url}/v0.11.6\...v0.11.7[0.11.7] - 2025-01-09

=== Changed

* Description of options which depends on the features are always available
  ({pull-request-url}/689[#689])

== {compare-url}/v0.11.5\...v0.11.6[0.11.6] - 2024-10-29

=== Added

* Supports decoding from XBM ({pull-request-url}/645[#645])

=== Fixed

* Fall-back to decoding an inverted image ({pull-request-url}/633[#633])

== {compare-url}/v0.11.4\...v0.11.5[0.11.5] - 2024-09-22

=== Added

* Supports `oklab()` and `oklch()` for `--foreground` and `--background`

== {compare-url}/v0.11.3\...v0.11.4[0.11.4] - 2024-08-04

=== Changed

* Read only the first 7,090 bytes of the input data when encoding