@@ -14,140 +14,53 @@ permissions:
   contents: write
 
 jobs:
-  get-version:
-    name: Get version
+  release:
+    name: Release
     runs-on: ubuntu-24.04
-    outputs:
-      version: ${{ steps.get_version.outputs.version }}
-      version_without_v: ${{ steps.get_version_without_v.outputs.version-without-v }}
-    steps:
-      - name: Get version
-        id: get_version
-        run: echo "version=${GITHUB_REF_NAME##*/}" >> "$GITHUB_OUTPUT"
-      - name: Get version without v
-        id: get_version_without_v
-        run: echo "version-without-v=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
-
-  build:
-    name: Build
-    needs: get-version
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        target:
-          - aarch64-unknown-linux-musl
-          - x86_64-unknown-linux-musl
-          - aarch64-apple-darwin
-          - x86_64-apple-darwin
-          - aarch64-pc-windows-msvc
-          - x86_64-pc-windows-msvc
-        include:
-          - target: aarch64-unknown-linux-musl
-            os: ubuntu-24.04
-            use-cross: true
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-24.04
-            use-cross: true
-          - target: aarch64-apple-darwin
-            os: macos-14
-          - target: x86_64-apple-darwin
-            os: macos-14
-          - target: aarch64-pc-windows-msvc
-            os: windows-2022
-          - target: x86_64-pc-windows-msvc
-            os: windows-2022
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
+      - name: Setup Zig environment
+        uses: mlugg/setup-zig@v2.0.5
+        with:
+          version: 0.15.1
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
-          targets: ${{ matrix.target }}
-      - name: Install cross
-        if: ${{ matrix.use-cross }}
-        uses: taiki-e/install-action@v2.62.2
+      - name: Install cargo-zigbuild
+        uses: taiki-e/install-action@v2.62.1
         with:
-          tool: cross
+          tool: cargo-zigbuild
       - name: Cache build artifacts
         uses: Swatinem/rust-cache@v2.8.1
-        with:
-          key: ${{ matrix.target }}
       - name: Setup Ruby
-        if: matrix.os != 'windows-2022'
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3
       - name: Install Asciidoctor
-        if: matrix.os != 'windows-2022'
         run: |
           gem install asciidoctor
           asciidoctor -V
-      - name: Build a package
-        if: ${{ !matrix.use-cross }}
-        run: cargo build --release --target ${{ matrix.target }}
-      - name: Build a package with cross
-        if: ${{ matrix.use-cross }}
-        run: cross build --release --target ${{ matrix.target }}
-      - name: Build man pages
-        if: matrix.os != 'windows-2022'
-        run: asciidoctor -b manpage docs/man/man1/*.1.adoc
-      - name: Create a package
-        shell: bash
-        run: |
-          if [ "${{ matrix.os }}" != "windows-2022" ] ; then
-            bin="target/${{ matrix.target }}/release/qrtool"
-          else
-            bin="target/${{ matrix.target }}/release/qrtool.exe"
-          fi
-          package="qrtool-${{ needs.get-version.outputs.version }}-${{ matrix.target }}"
-
-          mkdir -p "${package}"/docs
-          cp README.md "${bin}" "${package}"
-          cp -r LICENSES "${package}"
-          cp {AUTHORS,BUILD,CHANGELOG,CONTRIBUTING}.adoc "${package}"/docs
-          if [ "${{ matrix.os }}" != "windows-2022" ] ; then
-            mkdir -p "${package}"/man
-            cp docs/man/man1/*.1 "${package}"/man
-          fi
-
-          if [ "${{ matrix.os }}" != "windows-2022" ] ; then
-            tar -cv --format=pax -f "${package}.tar" "${package}"
-            zstd --rm -19 -v "${package}.tar"
-          else
-            7z a -bb -mx=9 -m0=LZMA "${package}.7z" "${package}"
-          fi
-          rm -rv qrtool-*/
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Check `.goreleaser.yaml`
+        uses: goreleaser/goreleaser-action@v6.4.0
         with:
-          name: "qrtool-${{ needs.get-version.outputs.version }}-${{ matrix.target }}"
-          path: "qrtool-*-*"
-
-  release:
-    name: Release
-    needs:
-      - get-version
-      - build
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v5
-      - name: Calculate checksums
-        run: |
-          mv qrtool-*/* .
-          rmdir -v qrtool-*/
-          sha256sum qrtool-* | tee sha256sums.txt
-          b2sum qrtool-* | tee b2sums.txt
-      - name: Release
-        uses: softprops/action-gh-release@v2.3.3
+          distribution: "goreleaser"
+          version: "~> v2"
+          args: check
+      - name: Check GoReleaser
+        uses: goreleaser/goreleaser-action@v6.4.0
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+        with:
+          distribution: "goreleaser"
+          version: "~> v2"
+          args: release --clean --snapshot
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6.4.0
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          draft: true
-          files: |
-            qrtool-*
-            sha256sums.txt
-            b2sums.txt
-          name: "Release version ${{ needs.get-version.outputs.version_without_v }}"
+          distribution: "goreleaser"
+          version: "~> v2"
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
