@@ -1,0 +1,50 @@
+# SPDX-FileCopyrightText: 2025 Shun Sakai
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
+version: 2
+
+before:
+  hooks:
+    - asciidoctor -b manpage docs/man/man1/*.1.adoc
+
+builds:
+  - builder: rust
+    targets:
+      - aarch64-apple-darwin
+      - aarch64-unknown-linux-musl
+      - x86_64-pc-windows-gnu
+      - x86_64-unknown-linux-musl
+    flags:
+      - --release
+
+archives:
+  - formats: [tar.zst]
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+    format_overrides:
+      - goos: windows
+        formats: [zip]
+    files:
+      - AUTHORS.adoc
+      - BUILD.adoc
+      - CHANGELOG.adoc
+      - CONTRIBUTING.adoc
+      - docs/man/man1/*.1
+      - LICENSES/*
+      - README.md
+
+checksum:
+  name_template: "b2sums.txt"
+  algorithm: blake2b
+
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - "^docs:"
+      - "^test:"
